# TuttleOFX

libraries/terry/src/terry/generator/: noisegenerator.hpp
libraries/terry/src/terry/numeric/: abs.hpp
plugins/image/generator/NoiseGenerator/: Jamfile.v2
plugins/image/generator/NoiseGenerator/src/: NoiseGeneratorDefinitions.hpp  NoiseGeneratorPlugin.cpp  NoiseGeneratorPlugin.hpp  NoiseGeneratorPluginFactory.cpp  NoiseGeneratorPluginFactory.hpp  NoiseGeneratorProcess.hpp  NoiseGeneratorProcess.tcc  mainEntry.cpp
plugins/image/process/color/ToneMapping/: Jamfile.v2  conversion rgb xyz.txt
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/: AUTHORS  ChangeLog  Jamfile.v2  Makefile  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  confdefs.h  config.h  config.h.in  config.status  configure  configure.ac  libtool
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/conftest.dir/sub/: conftest.c
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/: Makefile  Makefile.am  Makefile.in
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/drago03/: Makefile  Makefile.am  Makefile.in  pfstmo_drago03  pfstmo_drago03.cpp
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/drago03/.deps/: pfstmo_drago03.Po  tmo_drago03.Po
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/durand02/: Makefile  Makefile.am  Makefile.in  pfstmo_durand02  tmo_durand02.cpp
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/durand02/.deps/: bilateral.Po  pfstmo_durand02.Po  tmo_durand02.Po
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/fattal02/: Makefile  Makefile.am  Makefile.in  pde.cpp  pde.h  pfstmo_fattal02  pfstmo_fattal02.1  pfstmo_fattal02.cpp  tmo_fattal02.cpp  tmo_fattal02.h
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/fattal02/.deps/: pde.Po  pfstmo_fattal02.Po  tmo_fattal02.Po
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/mantiuk06/: Makefile  Makefile.am  Makefile.in  contrast_domain.cpp  pfstmo_mantiuk06  pfstmo_mantiuk06.1  pfstmo_mantiuk06.cpp
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/mantiuk06/.deps/: contrast_domain.Po  pfstmo_mantiuk06.Po
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/mantiuk08/: Makefile  Makefile.am  Makefile.in  display_adaptive_tmo.cpp  display_adaptive_tmo.h  display_function.cpp  pfstmo_mantiuk08.1  pfstmo_mantiuk08.cpp
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/mantiuk08/cqp/: Makefile  Makefile.am  Makefile.in
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/pattanaik00/: Makefile  Makefile.am  Makefile.in  pfstmo_pattanaik00  tmo_pattanaik00.cpp
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/pattanaik00/.deps/: pfstmo_pattanaik00.Po  tmo_pattanaik00.Po
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/pfstmo/: pfstmo.h
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/reinhard02/: Makefile  Makefile.am  Makefile.in  pfstmo_reinhard02  pfstmo_reinhard02.1  tmo_reinhard02.cpp
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/reinhard02/.deps/: approx.Po  pfstmo_reinhard02.Po  tmo_reinhard02.Po
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/reinhard05/: Makefile  Makefile.am  Makefile.in  pfstmo_reinhard05  tmo_reinhard05.cpp
plugins/image/process/color/ToneMapping/Libraries/pfstmo-1.4/src/reinhard05/.deps/: pfstmo_reinhard05.Po  tmo_reinhard05.Po
plugins/image/process/color/ToneMapping/Libraries/pfstools-1.8.5/: Jamfile.v2  Makefile  config.h  config.status  libtool
plugins/image/process/color/ToneMapping/Libraries/pfstools-1.8.5/doc/: Makefile
plugins/image/process/color/ToneMapping/Libraries/pfstools-1.8.5/src/: Makefile
plugins/image/process/color/ToneMapping/Libraries/pfstools-1.8.5/src/fileformat/: Makefile  pfsinimgmagick  pfsinpfm  pfsinrgbe  pfsintiff  pfsoutimgmagick  pfsoutpfm  pfsoutrgbe  pfsouttiff
plugins/image/process/color/ToneMapping/Libraries/pfstools-1.8.5/src/fileformat/.deps/: hdrtiffio.Po  pfsinimgmagick.Po  pfsinpfm.Po  pfsinrgbe.Po  pfsintiff.Po  pfsoutimgmagick.Po  pfsoutpfm.Po  pfsoutrgbe.Po  pfsouttiff.Po  rgbeio.Po
plugins/image/process/color/ToneMapping/Libraries/pfstools-1.8.5/src/fileformat/.libs/: pfsinimgmagick  pfsinpfm  pfsinrgbe  pfsintiff  pfsoutimgmagick  pfsoutpfm  pfsoutrgbe  pfsouttiff
plugins/image/process/color/ToneMapping/Libraries/pfstools-1.8.5/src/filter/: Makefile  pfsabsolute  pfscat  pfsclamp  pfscut  pfsdisplayfunction  pfsextractchannels  pfsflip  pfsgamma  pfspad  pfspanoramic  pfsrotate  pfssize  pfstag
plugins/image/process/color/ToneMapping/Libraries/pfstools-1.8.5/src/hdrhtml/: Makefile  pfsouthdrhtml
plugins/image/process/color/ToneMapping/Libraries/pfstools-1.8.5/src/matlab/: Makefile
plugins/image/process/color/ToneMapping/Libraries/pfstools-1.8.5/src/octave/: Makefile
plugins/image/process/color/ToneMapping/Libraries/pfstools-1.8.5/src/pfs/: Makefile  colorspace.lo  libpfs-1.2.la  pfs.lo  pfs.pc  pfsutils.lo
plugins/image/process/color/ToneMapping/Libraries/pfstools-1.8.5/src/pfsglview/: Makefile  pfsglview
plugins/image/process/color/ToneMapping/Libraries/pfstools-1.8.5/src/pfsview/: Makefile  luminancerange_widget.moc.cpp  main.moc.cpp  pfsview  pfsview_widget.moc.cpp
plugins/image/process/color/ToneMapping/src/: ToneMappingDefinitions.hpp  ToneMappingPlugin.cpp  ToneMappingPlugin.hpp  ToneMappingPluginFactory.cpp  ToneMappingPluginFactory.hpp  ToneMappingProcess.hpp  ToneMappingProcess.tcc  mainEntry.cpp
plugins/image/process/filter/Awa/: Jamfile.v2
plugins/image/process/filter/Awa/src/: AwaDefinitions.hpp  AwaPlugin.cpp  AwaPlugin.hpp  AwaPluginFactory.cpp  AwaPluginFactory.hpp  AwaProcess.hpp  AwaProcess.tcc  mainEntry.cpp
plugins/image/process/geometry/SeamCarving/src/: SeamCarvingDefinitions.hpp  SeamCarvingPlugin.cpp  SeamCarvingPlugin.hpp  SeamCarvingPluginFactory.cpp  SeamCarvingProcess.hpp  SeamCarvingProcess.tcc  mainEntry.cpp
(+53 files in other folders)
